package eapli.base.event.recurringPattern.domain;

public enum RecurringFrequency {
    WEEKLY,ONCE,
}
