package eapli.base.event.recurringPattern.repositories;

import eapli.base.event.recurringPattern.domain.RecurringPattern;
import eapli.framework.domain.repositories.DomainRepository;

public interface RecurringPatternRepository extends DomainRepository<Integer, RecurringPattern> {

}
