@startuml

class TimeTable <<domain>>{
- UserName : user
- RecurringPattern : pattern
}

class RecurringPattern <<domain>>{
- LocalDate: startDate
- LocalDate: startDate
- LocalTime: endTime
- LocalTime: startTime
}

class RecurringFrequency<<enum>>{
- WEEKLY
- ONCE
}

class RecurringPatternRepository <<repository>>
class TimeTableRepository <<repository>>
class TimeTableService <<service>>{
- checkAvailabilityByUser(RecurringPattern),SystemUser)
+ checkAvailability(RecurringPattern, List<SystemUser>)
+ schedule(List<SystemUser>,(RecurringPattern))
}

TimeTable --> RecurringPattern : patterns
TimeTable : checkAvailability(RecurringPattern)


TimeTableService --> RecurringPatternRepository :patternRepo
TimeTableService --> TimeTableRepository :timeTableRepo

RecurringPatternRepository --> RecurringPattern : the recurringPattern
RecurringPattern --> RecurringFrequency : frequency
RecurringPattern : addException(LocalDate date)
RecurringPattern : overLap(RecurringPattern that)

TimeTableRepository --> TimeTable: the timeTable


@enduml
